
Version 200.1

Fixed bug in port reading (especially variantes of `read-string')
 and `file-position' that follow peeks on the port


Version 200, June 2002
>> See MzScheme_200.txt for information on major changes in
   MzScheme 200. Minor changes are listed below.
(cond) alays returns void; the cond-allow-fallthough parameter and
 exn:cond exception have been removed
Changed all comparison precedures to require at least two
 operands, including =, <, ..., char=?, char<?, ...,
 string=?, string<?, ...
Added locale support with string-locale<?, etc.
Added integer-byte-string->integer, floating-point-byte-string->real,
 integer->integer-byte-string, real->floating-point-byte-string,
Renamed exn:misc:user-break to exn:break
Removed the port field of exn:read
Renamed arity to procedure-arity
Replaced primitive-name and inferred-name with object-name
Added security guards for controlling file and network access
Added an "infix" conversion in the reader, triggered by a pair of dots
 between a pair of parens
Added #cs and #ci prefixes for controlling case sentivity during read
Added current-command-line-arguments parameter
Added error-print-source-location parameter
Added current-load/use-compiled parameter
Changed string constants to support ANSI C escapes (e.g., \n)
Fixed leaks (file descriptors, etc.) that could happen with
 thread kills
Fixed memory bug in the run-time support for mzc-compiled code
Fixed an old and serious set of tail-call+thread-or-exception+GC bugs 
 in the core interpreter
Changed the error display handler to take a raised value (usually
 an exception record) as a second argument
Removed make-hash-table-weak and changed make-hash-table to
 accept up to two flag arguments: 'weak and/or 'equal
Added eq-hash-code and equal-hash-code
Extended regexp-match, etc. to work on port inputs
Added read-strng-avail!* and write-string-avail*, which never block
Added peek-string, peek-string-avail!, peek-string-avail!*,
 and peek-string-avail!/enable-break